docs/_static/style.css
/* ... */
.main-heading img.small {
  display: none;
}

nav a {
  margin: 0 0.5em;
}

.extension-nav {
  text-transform: capitalize;
}

#hamburger-toggle {
  display: none;
}

.mobile {
  display: none !important;
}

@media screen and (max-width: 1000px) {
  main {
    margin-left: 0;
  }
  aside {
    position: relative;
    max-width: 100%;
    max-height: unset;
    padding: 0;
  }

  .desktop {
    display: none !important;
  }

  .mobile {
    display: block;
  }

  #sidebar {
    height: auto !important;
    padding: 12px;
  }

  header nav {
    justify-content: center;
    align-items: center;
  }

  header.top-header {
    position: relative;
  }

  .main-heading {
    display: block;
    line-height: 0; /* avoid layout issue */
    flex-basis: 100%;
    text-align: center;
    width: 100%;
    background-image: linear-gradient(to right, #ffd545 0%, #ffd545 50%, #3773a5 50%, #3773a5 100%);
  }

  .disnake-main-logo {
    display: none;
  }

  .main-heading img.small {
    display: inline-block;
    max-height: 50px;
  }

  header .header-breakpoint {
    flex-basis: 100%;
  }

  .top-header .header-breakpoint {
    padding: 10px;
    padding-left: 42px;
  }

  header .search-breakpoint {
    padding-left: 42px;
  }

  header .search-breakpoint > *  {
    margin: 0 0.5em;
  }

  header .extension-nav {
    padding: 6px 10px;
    flex-basis: 50px;
    flex-grow: 1;
    text-align: center;
    text-transform: capitalize;
  }

  header form.search {
    flex-grow: 1;
    max-width: 400px;
    margin-left: auto;
  }

  header .search-wrapper {
    margin: auto;
  }

  :target {
    scroll-margin-top: 190px;
  }

  #hamburger-toggle {
    position: fixed;
    top: 12px;
    left: 12px;
    display: block;
    z-index: 60;
    color: white;
    transition: left 0.6s, right 0.6s, color 0.6s;
    cursor: pointer;
  }

  #hamburger-toggle.opened {
    left: calc(100vw - 36px);
    color: white;
  }

  aside {
    visibility: hidden;
    position: fixed;
    top: 0;
    bottom: 0;
    left: -100vw;
    width: 100vw;
    transition: left 0.6s, visibility 0.6s;
    overflow: auto;
    z-index: 50;
  }

  aside.sidebar-toggle {
    visibility: visible;
    left: 0;
  }

  #sidebar > h3:first-child {
    margin-top: 0;
  }
}

#scrollbar {
  height: auto !important;
  overflow: scroll;
}

aside h3 {
  color: var(--mobile-nav-header-text);
  font-size: 24px;
  font-weight: normal;
}

.collapsible-arrow {
  font-size: 1.5em!important;
  left: -1.166em;
  top: 0.25em;
  user-select: none;
  position: relative;
  line-height: 0.5em;
  transition: transform 0.4s;
  transform: rotate(-90deg);
}

.expanded {
  transition: transform 0.4s;
  transform: rotate(0deg);
}

.ref-internal-padding {
  position: relative;
  left: -20px;
}

aside .material-icons {
  cursor: pointer;
  font-size: 2em;
}

.sidebar-toggle {
  display: unset !important;
}

#sidebar a {
  color: var(--nav-text);
}

#sidebar a:hover {
  color: var(--nav-hover-text);
}

#sidebar h3 {
  font-size: 24px;
  margin: 1em 1em 0 0;
}

#sidebar ul {
  list-style: none;
  margin: 1em 2em 2em 1em;
  padding: 0;
}

#sidebar ul ul {
  list-style: square;
  margin: 0em;
  margin-left: 1.5em;
}

#sidebar li.no-list-style {
  list-style: none;
}

#sidebar form {
  margin: 1em 0;
  display: flex;
  align-items: baseline;
}

/* search button stuff */

.search-wrapper {
  display: flex;
  align-items: stretch;
}

.search-wrapper > input[type=search] {
  font-family: "Roboto", Corbel, Avenir, "Lucida Grande", "Lucida Sans", sans-serif;
  outline: none;
  appearance: none;
  font-size: 1em;
}

.search-wrapper > input[type=search],
.search-wrapper > button[type=submit] {
  background-color: var(--sub-header-background);
  border: none;
  color: var(--search-text);
  padding: 0.25em;
  flex: 9;
}

.search-wrapper {
  border: 2px solid var(--search-border);
  border-radius: 8px;
  overflow: hidden;
}

.search-wrapper:focus-within {
  border-color: var(--search-focus);
}

/* .search-wrapper > input[type=search] {
  border: 1px solid var(--search-border);
  border-right: none;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.search-wrapper > input[type=search]:focus,
button[type=submit]:focus ~ input[type=search] {
  border: 1px solid var(--search-focus);
  border-right: none;
} */

.search-wrapper > button[type=submit] {
  color: var(--search-button);
  /* border: 1px solid var(--search-border); */
  /* border-left: none; */
  /* border-bottom-right-radius: 4px; */
  /* border-top-right-radius: 4px; */
  cursor: pointer;
  flex: 1;
}

/* .search-wrapper > button[type=submit]:focus,
input[type=search]:focus ~ button[type=submit] {
  border: 1px solid var(--search-focus);
  border-left: none;
} */

.search-wrapper > button[type=submit]:hover {
  background-color: var(--search-border);
  color: var(--search-button-hover);
}

p {
  margin-bottom: 8px;
}

/* prevent breakage if overflow happens */
main section section {
  overflow: auto;
}

dt.sig {
  overflow: auto;
  display: inline-block;
  max-width: 100%;
}

section h3 {
  max-width: 100%;
  overflow: auto;
}

/* jumplinks and sticky header */
:target {
  scroll-margin-top: 80px;
}


/* scroll to top button */

#to-top {
  position: fixed;
  bottom: 50px;
  right: 20px;

  cursor: pointer;
}

#to-top.is-rtd {
  bottom: 90px;
}

#to-top > span {
  display: block;

  width: auto;
  height: 30px;
  padding: 0 6px;

  background-color: var(--rtd-version-background);
  color: var(--rtd-version-main-text);
}

#to-top span {
  line-height: 30px;
  font-size: 90%;
  text-align: center;
}

/* copy button */

.relative-copy {
  position: relative;
}

.copy {
  cursor: pointer;
  position: absolute;
  top: 0px;
  right: 0px;
  border: 1px solid var(--codeblock-border);
  font-size: 0.875em;
  padding: 0.2em 0.5em;
  border-bottom-left-radius: 4px;
  display: flex;
}

/* -- body styles --------------------------------------------------------- */

hr {
  border: 1px solid var(--hr-border);
}
/* ... */

